fix overflowing long single words

--- a/civictechprojects/static/css/partials/_AboutUser.scss
+++ b/civictechprojects/static/css/partials/_AboutUser.scss
@@ -8,6 +8,7 @@
 .about-user-section {
   padding-left: 10px;
   padding-right: 10px;
+  overflow-wrap: anywhere;
 }
 
 .AboutUser-root .VolunteerCard-img, .AboutUser-root .person-icon-container {
